objects/Case.object
<CustomObject>
    <fields>
        <fullName>Client_Phone__c</fullName>
        <label>Client Phone</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Escalation_Counter__c</fullName>
        <label>Escalation Counter</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Escalation_Reason__c</fullName>
        <label>Escalation Reason</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>International__c</fullName>
        <defaultValue>false</defaultValue>
        <label>International</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Last_Auto_Escalation_Date__c</fullName>
        <label>Last Auto Escalation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager_Assignment_Date__c</fullName>
        <label>Manager Assignment Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Support_Case_Status__c</fullName>
        <label>Most Recent Support Case Status</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Most_Recent_Support_Case__c</fullName>
        <label>Most Recent Support Case</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notification_Template__c</fullName>
        <label>Notification Template</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Pipeline_Test__c</fullName>
        <label>Pipeline Test</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Region__c</fullName>
        <label>Region</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>West Coast</fullName>
                </value>
                <value>
                    <fullName>Mountain</fullName>
                </value>
                <value>
                    <fullName>Central</fullName>
                </value>
                <value>
                    <fullName>Midwest</fullName>
                </value>
                <value>
                    <fullName>East Coast</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Technical_Assessment__c</fullName>
        <label>Technical Assessment</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>AllOpenCases</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>All Open Cases</label>
    </listViews>
    <listViews>
        <fullName>MyCases</fullName>
        <filterScope>Mine</filterScope>
        <label>My Cases</label>
    </listViews>
    <listViews>
        <fullName>MyOpenCases</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>CASES.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <label>My Open Cases</label>
    </listViews>
    <sharingModel>ReadWriteTransfer</sharingModel>
</CustomObject>